TODO/ldap/docker-ldap-account-manager/kubernetes/lam.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: lam-svc
spec:
  selector:
    app: lam
  ports:
  - name: web
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lam
spec:
  selector:
    matchLabels:
      app: lam
  replicas: 1
  template:
    metadata:
      labels:
        app: lam
    spec:
      containers:
      - name: lam
        image: sokoow/lam:6.9
        ports:
        - containerPort: 80
        volumeMounts:
           - name: lam-conf
             mountPath: /data/config
      volumes:
       - name: lam-conf
         hostPath:
          path: /data/lam/conf
