TODO/ldap/docker-ldap-account-manager/kubernetes/lam-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lam
  namespace: default
spec:
  rules:
  - host: lam.mykube.awesome
    http:
      paths:
      - path: /
        backend:
          serviceName: lam-svc
          servicePort: 80
